# clipping-benchmark

./: CMakeLists.txt  README.md
benchmark/: .plot.gp.kak.v3Bw0r  clipper.cpp  generator.c  gpc.c  measure.h  plot.sh  shp2gpf.c
clipper.6.4.2/: CMakeLists.txt
clipper.6.4.2/src/: test.cpp
gpc.2.33/: CMakeLists.txt  gpc.c
polygons/: 100_stars_1.gpf  100_stars_2.gpf  50_stars_1.gpf  50_stars_2.gpf  Antarctica.gpf  Brazil.gpf  Britain.gpf  Canada.gpf  Germany.gpf  Greenland.gpf  Indonesia.gpf  Japan.gpf  Russia.gpf
utils/: shp2gpf.c
